@@ -1,3 +1,10 @@
+2018-10-23  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/85603
+	* gfortran.dg/deferred_character_23.f90 : Check reallocation is
+	occurring as it should and a regression caused by version 1 of
+	this patch.
+
 2018-10-22  Yury Gribov  <tetra2005@gmail.com>
 
 	PR tree-optimization/87633
