@@ -1,3 +1,12 @@
+2018-10-23  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/85603
+	* frontend-passes.c (get_len_call): New function to generate a
+	call to intrinsic LEN.
+	(create_var): Use this to make length expressions for variable
+	rhs string lengths.
+	Clean up some white space issues.
+
 2018-10-21  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/71880
